// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Label Generator - Snapshot Tests (Intermediate Data) > should produce consistent all variant data (golden path) 1`] = `
{
  "componentConfig": {
    "colors": [
      "text-label",
      "text-surface",
    ],
    "description": "When true, only renders the inline content (indicators, tooltip) without the outer span with font styling. Useful when composed inside another label element that already provides the text styling. / asContent?: boolean; } /** Label component for form fields. Provides a standardized way to display labels with optional indicators: - Optional indicator: gray "(optional)" text when \`showOptional={true}\` - Tooltip: info icon with hover tooltip for additional context // Basic label <Label>Email</Label> // Optional field with indicator <Label showOptional>Middle Name</Label> // With tooltip <Label tooltip="We'll use this to send you updates">Email</Label> // With ReactNode children <Label> <span>Custom label with <strong>bold</strong> text</span> </Label>",
    "name": "Label",
    "props": {
      "asContent": {
        "description": "When true, only renders the inline content (indicators, tooltip) without the outer span with font styling. Useful when composed inside another label element that already provides the text styling.",
        "optional": true,
        "type": "boolean",
      },
      "children": {
        "description": "The label content - can be a string or any React node",
        "optional": true,
        "type": "ReactNode",
      },
      "className": {
        "description": "Additional CSS classes",
        "optional": true,
        "type": "string",
      },
      "showOptional": {
        "description": "When true (and required is false), shows gray "(optional)" text after the label",
        "optional": true,
        "type": "boolean",
      },
      "tooltip": {
        "description": "Tooltip content to display next to the label via an info icon",
        "optional": true,
        "type": "ReactNode",
      },
    },
  },
  "configs": [
    {
      "iconConfig": null,
      "layoutConfig": {
        "counterAxisAlignItems": "CENTER",
        "counterAxisSizingMode": "AUTO",
        "itemSpacing": 4,
        "layoutMode": "HORIZONTAL",
        "primaryAxisAlignItems": "MIN",
        "primaryAxisSizingMode": "AUTO",
      },
      "showOptional": false,
      "showTooltip": false,
      "textConfig": {
        "main": {
          "fontSize": 14,
          "fontWeight": 500,
          "textVariable": "text-color-surface",
        },
        "optional": {
          "fontSize": 14,
          "fontWeight": 400,
          "textVariable": "text-color-label",
        },
      },
    },
    {
      "iconConfig": null,
      "layoutConfig": {
        "counterAxisAlignItems": "CENTER",
        "counterAxisSizingMode": "AUTO",
        "itemSpacing": 4,
        "layoutMode": "HORIZONTAL",
        "primaryAxisAlignItems": "MIN",
        "primaryAxisSizingMode": "AUTO",
      },
      "showOptional": true,
      "showTooltip": false,
      "textConfig": {
        "main": {
          "fontSize": 14,
          "fontWeight": 500,
          "textVariable": "text-color-surface",
        },
        "optional": {
          "fontSize": 14,
          "fontWeight": 400,
          "textVariable": "text-color-label",
        },
      },
    },
    {
      "iconConfig": {
        "colorVariable": "text-color-label",
        "name": "ph-info",
        "size": 16,
      },
      "layoutConfig": {
        "counterAxisAlignItems": "CENTER",
        "counterAxisSizingMode": "AUTO",
        "itemSpacing": 4,
        "layoutMode": "HORIZONTAL",
        "primaryAxisAlignItems": "MIN",
        "primaryAxisSizingMode": "AUTO",
      },
      "showOptional": false,
      "showTooltip": true,
      "textConfig": {
        "main": {
          "fontSize": 14,
          "fontWeight": 500,
          "textVariable": "text-color-surface",
        },
        "optional": {
          "fontSize": 14,
          "fontWeight": 400,
          "textVariable": "text-color-label",
        },
      },
    },
    {
      "iconConfig": {
        "colorVariable": "text-color-label",
        "name": "ph-info",
        "size": 16,
      },
      "layoutConfig": {
        "counterAxisAlignItems": "CENTER",
        "counterAxisSizingMode": "AUTO",
        "itemSpacing": 4,
        "layoutMode": "HORIZONTAL",
        "primaryAxisAlignItems": "MIN",
        "primaryAxisSizingMode": "AUTO",
      },
      "showOptional": true,
      "showTooltip": true,
      "textConfig": {
        "main": {
          "fontSize": 14,
          "fontWeight": 500,
          "textVariable": "text-color-surface",
        },
        "optional": {
          "fontSize": 14,
          "fontWeight": 400,
          "textVariable": "text-color-label",
        },
      },
    },
  ],
  "iconConfig": {
    "colorVariable": "text-color-label",
    "name": "ph-info",
    "size": 16,
  },
  "layoutConfig": {
    "counterAxisAlignItems": "CENTER",
    "counterAxisSizingMode": "AUTO",
    "itemSpacing": 4,
    "layoutMode": "HORIZONTAL",
    "primaryAxisAlignItems": "MIN",
    "primaryAxisSizingMode": "AUTO",
  },
  "textConfig": {
    "main": {
      "fontSize": 14,
      "fontWeight": 500,
      "textVariable": "text-color-surface",
    },
    "optional": {
      "fontSize": 14,
      "fontWeight": 400,
      "textVariable": "text-color-label",
    },
  },
}
`;

exports[`Label Generator - Snapshot Tests (Intermediate Data) > should produce consistent complete config for default label 1`] = `
{
  "iconConfig": null,
  "layoutConfig": {
    "counterAxisAlignItems": "CENTER",
    "counterAxisSizingMode": "AUTO",
    "itemSpacing": 4,
    "layoutMode": "HORIZONTAL",
    "primaryAxisAlignItems": "MIN",
    "primaryAxisSizingMode": "AUTO",
  },
  "showOptional": false,
  "showTooltip": false,
  "textConfig": {
    "main": {
      "fontSize": 14,
      "fontWeight": 500,
      "textVariable": "text-color-surface",
    },
    "optional": {
      "fontSize": 14,
      "fontWeight": 400,
      "textVariable": "text-color-label",
    },
  },
}
`;

exports[`Label Generator - Snapshot Tests (Intermediate Data) > should produce consistent complete config for label with both 1`] = `
{
  "iconConfig": {
    "colorVariable": "text-color-label",
    "name": "ph-info",
    "size": 16,
  },
  "layoutConfig": {
    "counterAxisAlignItems": "CENTER",
    "counterAxisSizingMode": "AUTO",
    "itemSpacing": 4,
    "layoutMode": "HORIZONTAL",
    "primaryAxisAlignItems": "MIN",
    "primaryAxisSizingMode": "AUTO",
  },
  "showOptional": true,
  "showTooltip": true,
  "textConfig": {
    "main": {
      "fontSize": 14,
      "fontWeight": 500,
      "textVariable": "text-color-surface",
    },
    "optional": {
      "fontSize": 14,
      "fontWeight": 400,
      "textVariable": "text-color-label",
    },
  },
}
`;

exports[`Label Generator - Snapshot Tests (Intermediate Data) > should produce consistent complete config for label with optional 1`] = `
{
  "iconConfig": null,
  "layoutConfig": {
    "counterAxisAlignItems": "CENTER",
    "counterAxisSizingMode": "AUTO",
    "itemSpacing": 4,
    "layoutMode": "HORIZONTAL",
    "primaryAxisAlignItems": "MIN",
    "primaryAxisSizingMode": "AUTO",
  },
  "showOptional": true,
  "showTooltip": false,
  "textConfig": {
    "main": {
      "fontSize": 14,
      "fontWeight": 500,
      "textVariable": "text-color-surface",
    },
    "optional": {
      "fontSize": 14,
      "fontWeight": 400,
      "textVariable": "text-color-label",
    },
  },
}
`;

exports[`Label Generator - Snapshot Tests (Intermediate Data) > should produce consistent complete config for label with tooltip 1`] = `
{
  "iconConfig": {
    "colorVariable": "text-color-label",
    "name": "ph-info",
    "size": 16,
  },
  "layoutConfig": {
    "counterAxisAlignItems": "CENTER",
    "counterAxisSizingMode": "AUTO",
    "itemSpacing": 4,
    "layoutMode": "HORIZONTAL",
    "primaryAxisAlignItems": "MIN",
    "primaryAxisSizingMode": "AUTO",
  },
  "showOptional": false,
  "showTooltip": true,
  "textConfig": {
    "main": {
      "fontSize": 14,
      "fontWeight": 500,
      "textVariable": "text-color-surface",
    },
    "optional": {
      "fontSize": 14,
      "fontWeight": 400,
      "textVariable": "text-color-label",
    },
  },
}
`;

exports[`Label Generator - Snapshot Tests (Intermediate Data) > should produce consistent component config 1`] = `
{
  "colors": [
    "text-label",
    "text-surface",
  ],
  "description": "When true, only renders the inline content (indicators, tooltip) without the outer span with font styling. Useful when composed inside another label element that already provides the text styling. / asContent?: boolean; } /** Label component for form fields. Provides a standardized way to display labels with optional indicators: - Optional indicator: gray "(optional)" text when \`showOptional={true}\` - Tooltip: info icon with hover tooltip for additional context // Basic label <Label>Email</Label> // Optional field with indicator <Label showOptional>Middle Name</Label> // With tooltip <Label tooltip="We'll use this to send you updates">Email</Label> // With ReactNode children <Label> <span>Custom label with <strong>bold</strong> text</span> </Label>",
  "name": "Label",
  "props": {
    "asContent": {
      "description": "When true, only renders the inline content (indicators, tooltip) without the outer span with font styling. Useful when composed inside another label element that already provides the text styling.",
      "optional": true,
      "type": "boolean",
    },
    "children": {
      "description": "The label content - can be a string or any React node",
      "optional": true,
      "type": "ReactNode",
    },
    "className": {
      "description": "Additional CSS classes",
      "optional": true,
      "type": "string",
    },
    "showOptional": {
      "description": "When true (and required is false), shows gray "(optional)" text after the label",
      "optional": true,
      "type": "boolean",
    },
    "tooltip": {
      "description": "Tooltip content to display next to the label via an info icon",
      "optional": true,
      "type": "ReactNode",
    },
  },
}
`;

exports[`Label Generator - Snapshot Tests (Intermediate Data) > should produce consistent icon config 1`] = `
{
  "colorVariable": "text-color-label",
  "name": "ph-info",
  "size": 16,
}
`;

exports[`Label Generator - Snapshot Tests (Intermediate Data) > should produce consistent layout config 1`] = `
{
  "counterAxisAlignItems": "CENTER",
  "counterAxisSizingMode": "AUTO",
  "itemSpacing": 4,
  "layoutMode": "HORIZONTAL",
  "primaryAxisAlignItems": "MIN",
  "primaryAxisSizingMode": "AUTO",
}
`;

exports[`Label Generator - Snapshot Tests (Intermediate Data) > should produce consistent text config 1`] = `
{
  "main": {
    "fontSize": 14,
    "fontWeight": 500,
    "textVariable": "text-color-surface",
  },
  "optional": {
    "fontSize": 14,
    "fontWeight": 400,
    "textVariable": "text-color-label",
  },
}
`;
